--- a/src/assets/css/common/common.css
+++ b/src/assets/css/common/common.css
@@ -14,3 +14,18 @@
 }
 
 
+.nav-bar-container{
+    position: relative;
+}
+.top-left-return{
+ position: absolute;
+    /* width: 30px;
+    height: 30px; */
+    left: 10px;
+    top: 20px;
+    /* padding-left: 10px; */
+}
+#nav-return{
+    margin-top: 2px;
+    height: 30px;
+}
