--- a/src/assets/css/common/common.css
+++ b/src/assets/css/common/common.css
@@ -29,3 +29,13 @@
     margin-top: 2px;
     height: 30px;
 }
+
+.btn{
+    height: 50px;
+    width: 185px;
+    background-color: #fedb50;
+    border: none;
+    border-radius: 25px;
+    font-size: 18px;
+   
+  }
